...
            activeItem: Icon(PhosphorIconsFill.house, size: 22.sp),
            itemLabel: 'Home',
          ),
          BottomBarItem(
            inActiveItem: Icon(PhosphorIconsRegular.list, size: 22.sp),
            activeItem: Icon(PhosphorIconsFill.list, size: 22.sp),
            itemLabel: 'Transactions',
          ),
          BottomBarItem(
            inActiveItem: Icon(PhosphorIconsRegular.chartBar, size: 22.sp),
            activeItem: Icon(PhosphorIconsFill.chartBar, size: 22.sp),
            itemLabel: 'Analysis',
          ),
          BottomBarItem(
            inActiveItem: Icon(PhosphorIconsRegular.plusCircle, size: 22.sp),
            activeItem: Icon(PhosphorIconsFill.plusCircle, size: 22.sp),
            itemLabel: 'Add',
          ),
        ],
        onTap: (i) => setState(() => _index = i),
      ),

    );
...
