...
        SizedBox(height: 14.h),

        TextField(
          controller: _searchController,
          decoration: const InputDecoration(
            prefixIcon: Icon(Icons.search),
            labelText: 'Search ...',
          ),
          onChanged: (v) {
            _search = v.trim().isEmpty ? null : v.trim();
            _applyInstantly();
          },
        ),
...
